format for forms

--- a/newConnection.html
+++ b/newConnection.html
@@ -19,7 +19,7 @@
 
     <body>
         <div>
-            <form action="" class="connection">
+            <form action="" id="connection">
                 <label for="topic">Topic</label>
                 <input type="text" id="topic" name="topic"> <br>
                 <label for="title">Title</label>
