--- a/newConnection.html
+++ b/newConnection.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Project 1</title>
-        <link href="headerAndFooter.css" rel="stylesheet">
+        <link href="defaultSettings.css" rel="stylesheet">
     </head>
 
     <header> 
