--- a/newConnection.html
+++ b/newConnection.html
@@ -18,26 +18,27 @@
     </header>
 
     <body>
-        <div>
+        <div class="connection">
             <form action="" id="connection">
-                <label for="topic">Topic</label>
-                <input type="text" id="topic" name="topic"> <br>
-                <label for="title">Title</label>
-                <input type="text" id="title" name="title"> <br>
-                <label for="host">Host</label>
-                <input type="text" id="host" name="host"> <br>
-                <label for="details">Details</label>
-                <input type="textarea" id="details" name="details"> <br>
-                <label for="where">Where</label>
-                <input type="text" id="where" name="where"> <br>
-                <label for="when">When</label>
-                <input type="date" id="when" name="id"> <br>
-                <label for="start">Start</label>
-                <input type="time" id="start" name="start"> <br>
-                <label for="end">End</label>
-                <input type="time" id="end" name="end"> <br>
-                <label for="imageUrl">Image Url</label>
-                <input type="text" id="imageUrl" name="imageUrl"> <br>     
+                <label for="topic">Topic:</label>
+                <input type="text" id="topic" name="topic" placeholder="topic"> <br><br>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" placeholder="title"> <br><br>
+                <label for="host">Host:</label>
+                <input type="text" id="host" name="host" placeholder="host"> <br><br>
+                <label for="details">Details:</label>
+                <input type="textarea" id="details" name="details" placeholder="description"> <br><br>
+                <label for="where">Where:</label>
+                <input type="text" id="where" name="where" placeholder="location"> <br><br>
+                <label for="when">When:</label>
+                <input type="date" id="when" name="id"> <br><br>
+                <label for="start">Start:</label>
+                <input type="time" id="start" name="start"> <br><br>
+                <label for="end">End:</label>
+                <input type="time" id="end" name="end"> <br><br>
+                <label for="imageUrl">Image Url:</label>
+                <input type="text" id="imageUrl" name="imageUrl" placeholder="image URL"> <br><br>
+                <input type="button" id="create" value="Create Creation">
             </form>
         </div>
     </body>
